# Spirit3-FM

./: .gitignore  AndroidManifest.xml  README.md  build.sh  build_spirit2_free  local.properties  project.properties
assets/: freq.html
jni/: Android.mk  Application.mk  CMakeLists.txt  asound.h  jut.c  man_ver.h  s2d.c  ssd.c  utils.c
jni/plug/: plug.c  tnr_qcv.c
jni/plug/inc/: fmradio.h
res/anim/: ani_preset.xml  ani_preset_layout.xml  anim_recording.xml
res/drawable/: border_shadow.xml  checkbox_selector.xml  custom_thumb.xml  frequency_seek_border_shadow.xml  frequency_seek_progress.xml  frequency_seek_style.xml  frequency_seek_thumb.xml  ic_pause.xml  ic_play.xml  ic_preferences.xml  ic_recording.xml  ic_visualizer.xml  ic_visualizer_disabled.xml  seekbar_progress.xml  seekbar_style.xml
res/drawable-xhdpi/: sel_record.xml
res/layout/: activity_logcat.xml  activity_main.xml  activity_settings.xml  dialog_startup.xml  edit_number.xml  gui_gui_layout.xml  gui_pg1_layout.xml  item_preference.xml  notif_shade.xml  notification_small.xml  player_fragment.xml  widget_layout.xml
res/raw/: spirit_sh
res/values/: arrays.xml  colors.xml  dimens.xml  integers.xml  strings.xml  styles.xml
res/values-ru/: strings.xml
res/xml/: pref_screen.xml  widget_info.xml
src/fm/a2d/sf/: AbstractActivity.java  AudioStateListener.java  C.java  LogCatActivity.java  MainActivity.java  MainService.java  MyApp.java  PrefActivity.java  RadioRecorder.java  ServiceAudioAPIImpl.java  ServiceAudioCallback.java  ServiceMediaReceiver.java  ServiceTuner.java  ServiceTunerAPIImpl.java  (+15 more)
(+13 files in other folders)
